  duplication in the resulting map, leading to robber death from simulation
  mismatch.

--Blocked robber actions after death or reaching vault (in case of keyboard
  mashing where several key events might be queue for a given frame) to prevent
  family duplication due to multiple end actions.  Also added a check to always
  prevent multiple occurrences of family end processing.
 




Version 33  Live Server Fixes

--Temporary fix to prevent people who submitt #L#L#L move lists (multiple leave
  events due to mashing the keyboard during client-side framerate lag) from
  being killed (thanks Jabloko).

--Fixed undefined variable warning in set_error_handler (thanks MMaster).

--Better error logging when server-side simulation fails.




Version 33     2014-February-20

--Fixed the electrobreaker issue and wireless transmission by not jumping back
  to start state when a circuit overruns the substep limit (thanks Iceman).

--Huge optimization to power propagation and transitions by skipping cells
  (like empty floor and walls) that are never affected by power.

--Got rid of terminal print out when a mobile steps on a button.

--Fixed so that Un-ignore All button does not jump back to the top of the house
  list (thanks MMaster).





Version 32  Live Server Fixes

--Fixed so that backpack contents value is taken into account when calculating
  your financial neigborhood to decide which page of the house list to show you
  first (before, if you spent all money on tools, you'd start at the 0 houses).




Version 32    2014-February-14

--Client support for not specifying a skip in the first house list fetched,
  allowing the server to pick a good page in the house list based on the
  player's current house value.  The player can then scroll freely up and down
  from there (thanks Iceman).

--Running an empty search on the house list page now returns you to your value
  neighborhood on the house list instead of jumping back to the top of the list
  (thanks Jere).
